site fully reactive and no longer looks messed up when viewing from 600px wide. still need to check on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -1,15 +1,18 @@
 /**** Hero Section ****/
 
 .hero{
-    position: relative; /* to make this div the relative ancestor of .herotext */
-    text-align: right; /* to center all the content in .hero */
+    position: relative; 
+    height: 600px;;
 }
 
 .hero img{
+
     width: 100%;
-    height: 600px;
+    height: 100%;
     object-fit: cover;
     object-position:left center ;
+    padding: 0;
+    margin: 0;
 }
 
 .heroTextContainer{
@@ -146,3 +149,95 @@
 }
 
 /**** Practice Section END ****/
+
+
+@media only screen and (max-width: 600px){
+
+    /**** Welcome to Legal Section ****/
+
+    .teamIntro{
+        height: 1200px;
+        display:block;
+ 
+        padding: 50px 0px;
+
+        justify-content: center;
+        align-items: center;
+
+        background-color:rgb(233, 233, 233);
+
+    }
+
+    .teamIntroImage{
+        text-align: center;
+
+    }
+
+    .teamIntroImage img{
+        width: 100%;
+    }
+
+    .teamIntroText{
+        width: 100%;
+
+        text-align: center;
+        /* background-color:coral; */
+    }
+
+    /**** Welcome to Legal Section END****/
+
+    /**** Team Section ****/
+
+    .ourTeam{
+        text-align: center;
+        
+        padding: 10px 0px;
+    }
+
+    .ourTeam h1{
+        font-size: 70px;
+        font-weight: normal;
+    }
+
+    .ourTeam h3{
+        font-size: 18px;
+        font-weight: normal;
+        color: green;
+        font-style: italic;
+        line-height: 0;
+    }
+
+    .ourTeamItems{
+
+        display: flex;
+        gap: 35px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        flex-wrap: wrap;
+
+        justify-content: center;
+
+    }
+
+    .ourTeamItem img{
+        width: 100%;
+    }
+
+    .ourTeamItem{
+        border: 1px solid rgb(197, 197, 197);
+        box-shadow: 10px 10px 10px 10px #888888;
+
+        padding: 10px;
+        flex: 450px;
+        max-width: 500px;
+
+        line-height: 28px;
+    }
+
+    .ourTeamItem h2{
+        color: green;
+    }
+
+    /**** Practice Section END ****/
+
+}
