--- a/css/contact.css
+++ b/css/contact.css
@@ -1,15 +1,23 @@
 /**** Hero Section ****/
 
 .hero{
-    position: relative; /* to make this div the relative ancestor of .herotext */
-    text-align: right; /* to center all the content in .hero */
+    position: relative; 
+    text-align: right; 
+    height: 650px;
 }
 
 .hero img{
-    width: 100%;
+    /* width: 100%;
     height: 650px;
     object-fit: cover;
-    object-position: 0 50%;
+    object-position: 0 50%; */
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center ;
+    padding: 0;
+    margin: 0;
 }
 
 .heroTextContainer{
@@ -38,52 +46,8 @@
 /**** Hero Section END ****/
 
 
-/**** Welcome to Legal Section ****/
 
-.teamIntro{
-    padding: 100px 0;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 80px; 
-
-    justify-content: center;
-    align-items: center;
-
-    background-color:rgb(233, 233, 233);
-
-}
-
-.teamIntroImage{
-    height: 550px;
-    text-align: right;
-}
-
-.teamIntroImage img{
-    height: 450px;
-
-}
-
-.teamIntroText{
-    width: 75%;
-    line-height: 35px;
-}
-
-.teamIntroText h2{
-    font-size: 40px;
-    color: green;
-    font-weight: bold;
-}
-
-.teamIntroText p{
-    font-size: 20px;
-
-}
-
-/**** Welcome to Legal Section END****/
-
-
-/**** Team Section ****/
+/**** Contact Section ****/
 
 .contactSection{
     text-align: center;
@@ -91,7 +55,7 @@
 }
 
 .contactSection h1{
-    font-size: 45px;
+    font-size: 40px;
 }
 
 .contactSection h3{
@@ -111,7 +75,7 @@
 
     display: flex;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
     flex-wrap: wrap;
 
     justify-content: center;
@@ -120,6 +84,12 @@
 
 .contactItem img{
     width: 100%;
+}
+
+.locSect{
+    margin-top: 50px;
+    font-size: larger;
+    background-color: white;
 }
 
 .contactItem{
@@ -139,7 +109,7 @@
     line-height: 24px;
 }
 
-/**** Practice Section END ****/
+/**** Contact Section END ****/
 
 /******* Locations ******/
 
@@ -152,5 +122,74 @@
     align-items: center;
 }
 
+.location-item h3{
+    font-size: larger;
+    padding: 0 0px 20px 0;
+}
+
+.location-item p{
+    line-height: 8px;
+}
+
+.locMap{
+    width:500px;
+    height:450px;
+}
 
 /******** end locations ********/
+
+
+@media only screen and (max-width: 600px){
+
+    .hero img{
+        /* width: 100%;
+        height: 650px;
+        object-fit: cover;
+        object-position: 0 50%; */
+    
+        height: 100%;
+        object-fit: cover;
+        object-position: 30% 0;
+        padding: 0;
+        margin: 0;
+    }
+
+    .contactSection{
+        text-align: center;
+        padding: 55px 0px;
+    }
+
+    .contactSection h1{
+        font-size: 35px;
+    }
+    
+
+    /******* Locations ******/
+
+    .locations{
+        display: flex;
+        gap: 35px 0;
+        margin-top: 20px;
+        flex-wrap: wrap;
+
+        justify-content: center;
+
+        padding: 0;
+        margin: 0;
+    }
+
+    .location-item{
+        width: 100%;
+    }
+
+    .locMap{
+        width: 100%;
+        height: 400px;
+        padding: 0;
+        margin: 0;
+    }
+
+    /******** end locations ********/
+    
+
+}
