--- a/css/index.css
+++ b/css/index.css
@@ -4,19 +4,20 @@ img{
     max-height: 100%;
 }
 
-
-
 .homeHero{
     position: relative; 
     text-align: right; 
-    
+    height: 800px;
 }
 
 .homeHero img{
+
     width: 100%;
-    height: 900px;
+    height: 100%;
     object-fit: cover;
-    object-position: left bottom;
+    object-position:left bottom ;
+    padding: 0;
+    margin: 0;
 }
 
 .heroTextContainer{
@@ -331,11 +332,11 @@ img{
     .homeHero{
         position: relative; 
         text-align: right; 
-        
+        height: 550px;
     }
     
     .homeHero img{
-        height: 550px;
+        
         object-fit: cover;
         object-position: center bottom;
     }
