--- a/css/services.css
+++ b/css/services.css
@@ -1,15 +1,19 @@
 /**** Hero Section ****/
 
 .hero{
-    position: relative; /* to make this div the relative ancestor of .herotext */
-    text-align: right; /* to center all the content in .hero */
+    position: relative; 
+    text-align: right; 
+    height: 600px;
 }
 
 .hero img{
+
     width: 100%;
-    height: 600px;
+    height: 100%;
     object-fit: cover;
-    object-position:center;
+    object-position: center ;
+    padding: 0;
+    margin: 0;
 }
 
 .heroTextContainer{
@@ -24,11 +28,11 @@
 
 }
 
-.aboutHeroText{
+.servicesHeroText{
     text-align:center;
 }
 
-.aboutHeroText h2{
+.servicesHeroText h2{
     font-size: 75px;
     font-weight: bold; /* make the text bold */
     line-height: 600px;
@@ -90,3 +94,16 @@
 }
 
 /**** Practice Section END ****/
+
+@media only screen and (max-width: 600px){
+
+    .servicesSect h1{
+        font-size: 60px;
+    }
+
+    .servicesSect{
+        text-align: center;
+        padding: 55px 0px;
+    }
+
+}
